[#2] Fix icons sizes and colors

--- a/src/AppleMAUsIc/AppleMAUsIc/AppleMAUsIc.csproj
+++ b/src/AppleMAUsIc/AppleMAUsIc/AppleMAUsIc.csproj
@@ -36,7 +36,6 @@
 	<ItemGroup>
 	  <MauiImage Include="Resources\Images\Icons\ic_3_dots.svg" />
 	  <MauiImage Include="Resources\Images\Icons\ic_albums.svg" />
-	  <MauiImage Include="Resources\Images\chaleur_humaine.png" />
 	  <MauiImage Include="Resources\Images\dotnet_bot.svg" />
 	  <MauiImage Include="Resources\Images\Icons\ic_four_squares.svg" />
 	  <MauiImage Include="Resources\Images\Icons\ic_radio.svg" />
@@ -63,7 +62,7 @@
 
 		<!-- Images -->
 		
-		<MauiImage Update="Resources\Images\Icons\*" BaseSize="32,32" />
+		<MauiImage Update="Resources\Images\Icons\*" BaseSize="28,28" />
 		<MauiFont Include="Resources\Fonts\*" />
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
@@ -77,7 +76,6 @@
 	  <None Remove="Resources\Images\Icons\ic_3_dots.svg" />
 	  <None Remove="Resources\Images\Icons\ic_albums.svg" />
 	  <None Remove="Resources\Images\Icons\ic_play_circle.svg" />
-	  <None Remove="Resources\Images\chaleur_humaine.png" />
 	  <None Remove="Resources\Images\dotnet_bot.svg" />
 	  <None Remove="Resources\Images\Icons\ic_four_squares.svg" />
 	  <None Remove="Resources\Images\Icons\ic_radio.svg" />
@@ -93,5 +91,35 @@
 	  <None Remove="Resources\Images\Icons\ic_download.svg" />
 	  <None Remove="Resources\Images\Icons\ic_check.svg" />
 	  <None Remove="Resources\Images\Icons\ic_back_arrow.svg" />
+	  <None Remove="Resources\Images\Covers\" />
+	  <None Remove="Resources\Images\Covers\different_world.png" />
+	  <None Remove="Resources\Images\Covers\everest.png" />
+	  <None Remove="Resources\Images\Covers\le_fete_est_finie.png" />
+	  <None Remove="Resources\Images\Covers\native.png" />
+	  <None Remove="Resources\Images\Covers\ensemble.png" />
+	  <None Remove="Resources\Images\Covers\mini_world.png" />
+	  <None Remove="Resources\Images\Covers\multitude.png" />
+	  <None Remove="Resources\Images\Covers\night_visions.png" />
+	  <None Remove="Resources\Images\Covers\recovery.png" />
+	  <None Remove="Resources\Images\Covers\paradize.png" />
+	  <None Remove="Resources\Images\Covers\speak_no_evil.png" />
+	  <None Remove="Model\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Resources\Images\Covers\" />
+	  <Folder Include="Model\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
+	  <BundleResource Include="**/*" />
 	</ItemGroup>
 </Project>
