[#2] Add custom view for the playing bar

--- a/src/AppleMAUsIc/AppleMAUsIc/AppleMAUsIc.csproj
+++ b/src/AppleMAUsIc/AppleMAUsIc/AppleMAUsIc.csproj
@@ -101,6 +101,9 @@
 	  <MauiXaml Update="Pages\LibraryPage.xaml">
 	    <SubType></SubType>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\CustomControls\MusicPlayingBarView.xaml">
+	    <SubType></SubType>
+	  </MauiXaml>
 	</ItemGroup>
 	<ItemGroup>
 	  <None Remove="Resources\Images\Icons\" />
