[#2] Add control for album cover and fix indings

--- a/src/AppleMAUsIc/AppleMAUsIc/AppleMAUsIc.csproj
+++ b/src/AppleMAUsIc/AppleMAUsIc/AppleMAUsIc.csproj
@@ -104,6 +104,9 @@
 	  <MauiXaml Update="Pages\CustomControls\MusicPlayingBarView.xaml">
 	    <SubType></SubType>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\CustomControls\AlbumCoverView.xaml">
+	    <SubType></SubType>
+	  </MauiXaml>
 	</ItemGroup>
 	<ItemGroup>
 	  <None Remove="Resources\Images\Icons\" />
